k3s/vaultwarden/vaultwarden.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: services
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: services
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Vaultwarden"
    gethomepage.dev/description: "Gestionnaire de mots de passe"
    gethomepage.dev/group: "Outils & Bureautique"
    gethomepage.dev/icon: "bitwarden.png"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.quick-shift.fr
      secretName: vaultwarden-tls
  rules:
    - host: vault.quick-shift.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
